init project env and a first page

--- a/BIZ/.gitignore
+++ b/BIZ/.gitignore
@@ -6,17 +6,13 @@ target
 .classpath
 .project
 
-Baas
-Baas.net
-Baas.php
-
 demo
 fac
 OA
 portal
+portal2
 SA
 system
 takeout
 third
 .jshintrc
-
